--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "libfritter",
+  "name": "@beaker/libfritter",
   "version": "1.0.0",
   "description": "Data definitions and methods for Fritter",
   "main": "index.js",
